syntax = "proto3";

package sherry.archive.tracking.events.v1;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "sherry-archive/tracking/events;events";

message DocumentView {
  string tracking_id = 1;
  google.protobuf.StringValue user_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  uint32 document_id = 4;
}

message ChapterView {
  string tracking_id = 1;
  google.protobuf.StringValue user_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  uint32 chapter_id = 4;
}

message ChapterCompleted {
  string tracking_id = 1;
  google.protobuf.StringValue user_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  uint32 chapter_id = 4;
}

message DocumentFavorited {
  string tracking_id = 1;
  google.protobuf.StringValue user_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  uint32 document_id = 4;
}